@@ -23,9 +23,12 @@ import org.apache.streampipes.extensions.api.declarer.IExtensionModuleExport;
 import org.apache.streampipes.extensions.api.migration.IModelMigrator;
 import org.apache.streampipes.extensions.api.pe.IStreamPipesPipelineElement;
 import org.apache.streampipes.extensions.connectors.kafka.adapter.KafkaProtocol;
+import org.apache.streampipes.extensions.connectors.kafka.migration.KafkaAdapterMigrationV1;
+import org.apache.streampipes.extensions.connectors.kafka.migration.KafkaAdapterMigrationV2;
+import org.apache.streampipes.extensions.connectors.kafka.migration.KafkaSinkMigrationV1;
+import org.apache.streampipes.extensions.connectors.kafka.migration.KafkaSinkMigrationV2;
 import org.apache.streampipes.extensions.connectors.kafka.sink.KafkaPublishSink;
 
-import java.util.Collections;
 import java.util.List;
 
 public class KafkaConnectorsModuleExport implements IExtensionModuleExport {
@@ -45,6 +48,11 @@ public class KafkaConnectorsModuleExport implements IExtensionModuleExport {
 
   @Override
   public List<IModelMigrator<?, ?>> migrators() {
-    return Collections.emptyList();
+    return List.of(
+        new KafkaAdapterMigrationV1(),
+        new KafkaSinkMigrationV1(),
+        new KafkaAdapterMigrationV2(),
+        new KafkaSinkMigrationV2()
+    );
   }
 }
